KUBE/ISTIO/istio-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shopping-microservices-gateway
  namespace: demo-shopping
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-shopping-microservices-gateway
        protocol: HTTP
      hosts:
        - "*"
