KUBE/ISTIO/istio-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shopping-microservices-destination-rule
  namespace: demo-shopping
spec:
  host: frontend
  subsets:
    - name: v1
      labels:
        version: "1"
    - name: v2
      labels:
        version: "2"
