KUBE/ISTIO/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopping-microservices-vservice
  namespace: demo-shopping
spec:
  hosts:
    - "*"
  gateways:
    - shopping-microservices-gateway
  http:
    - match:
      - headers:
          version:
            exact: "2"
    - route:
        - destination:
            host: frontend
            port:
              number: 8080
            subset: v1
          weight: 10  
    - route:
        - destination:
            host: frontend
            port:
              number: 8080
            subset: v2
          weight: 90
